[workspace]
resolver = "2"
members = ["kernel"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["farkhad"]
repository = "https://github.com/f4rkh4d/pith"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
debug = "line-tables-only"
opt-level = 3
strip = "symbols"

[profile.dev]
panic = "abort"
opt-level = 1
debug = true
