[workspace]

[package]
name = "pith-user-bench"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["farkhad"]

[[bin]]
name = "bench"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
panic = "abort"
opt-level = 1
