[workspace]

[package]
name = "pith-user-ping"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["farkhad"]

[[bin]]
name = "ping"
path = "src/main.rs"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
panic = "abort"
opt-level = 1
